--- a/src/components/share.css
+++ b/src/components/share.css
@@ -68,9 +68,8 @@
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: green;
+    background-color: #1877f2;
     font-weight: 500;
     margin-right: 20px;
-    cursor: pointer;
     color: white;
 }
