--- a/src/components/post.css
+++ b/src/components/post.css
@@ -1,13 +1,14 @@
 .post {
-  width: 100%;
+  width: 90%;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   margin: 30px 0;
+  background-color: whitesmoke;
 }
 
 .postWrapper {
-  padding: 10px;
+  padding: 20px;
 }
 
 .postTop {
@@ -19,6 +20,12 @@
 .postTopLeft {
   display: flex;
   align-items: center;
+  padding-bottom: 5px;
+}
+
+.postText {
+  display: flex;
+  align-items: left;
 }
 
 .postProfileImg {
@@ -39,14 +46,15 @@
 }
 
 .postCenter{
-    margin: 20px 0;
+    margin: 5px 0;
 }
 
 .postImg{
-    margin-top: 20px;
+  
+    margin-top: 10px;
     width: 100%;
     max-height: 500px;
-    object-fit: contain;
+    object-fit:cover
 }
 
 .postBottom{
