--- a/src/components/share.css
+++ b/src/components/share.css
@@ -1,9 +1,10 @@
 .share {
-  width: 100%;
+  width: 90%;
   height: 120px;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  background-color: whitesmoke;
 }
 
 .shareWrapper {
@@ -25,7 +26,8 @@
 
 .shareInput {
   border: none;
-  width: 80%;
+  width: 100%;
+  background: none;
 }
 
 .shareInput:focus {
