--- a/src/components/topbar.css
+++ b/src/components/topbar.css
@@ -55,8 +55,7 @@
   align-items: center;
   justify-content: space-around;
   color: white;
-  
-  padding-left: 40%;
+  padding-left: 30%;
 }
 
 .topbarLink {
@@ -88,6 +87,15 @@
   align-items: center;
   justify-content: center;
   font-size: 12px;
+}
+.shareButton{
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: #1877f2;
+  font-weight: 500;
+  margin-right: 20px;
+  color: white;
 }
 
 .topbarImg {
